# kittiwake

./: .gitignore  AGENTS.md  PIVOT_SIDEBAR_GUIDE.md  README.md  check_docstrings.py  pyproject.toml  session-ses_4556.md  test_aggregate_manual.py  test_case_insensitive.py  test_column_colors.py  test_data_filtering.py  test_filter_modal.py  test_imports.py  test_large_file_loading.py  test_pivot_debug.py  test_pivot_flow_debug.py  test_pivot_sidebar_automated.py  test_pivot_sidebar_manual.py  test_pivot_sidebar_visibility.py  test_pivot_visual.py  test_quickstart_validation.py  test_ui_duplicate_id.py
.claude/: settings.local.json
.specify/memory/: constitution.md
docs/examples/: aggregation_workflow.py  basic_usage.py  export_workflow.py
specs/001-tui-data-explorer/: CHANGELOG.md  clarification-session-2.md  data-model.md  plan.md  quickstart.md  research-code-generation-security.md  research-duckdb-async-textual.md  research-multi-dataset-navigation.md  research-operation-execution-sequencing.md  research.md  security-review.md  spec.md  tasks.md
specs/001-tui-data-explorer/checklists/: requirements.md
specs/001-tui-data-explorer/contracts/: cli-interface.md  export-jupyter.jinja2  export-marimo.jinja2  export-python.jinja2  operations-schema.json  saved-analysis-schema.sql
specs/002-column-type-display/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-column-type-display/checklists/: requirements.md
specs/002-modern-tui-design/: UI-VISION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/kittiwake/: __init__.py  __main__.py  app.py  cli.py  simple_cli.py
src/kittiwake/models/: __init__.py  (+4 more)
tests/integration/: test_join_code_generation.py  test_lazy_eager_workflow.py  test_pivot_code_generation.py
tests/unit/: test_aggregate_sidebar.py  test_app_notify_error.py  test_dataset.py  test_dataset_limit_enforcement.py  test_filter_modal.py  test_join_sidebar.py  test_numerical_column_filtering.py  test_operation_builder.py  test_operations.py  test_operator_mapping.py  test_pivot_sidebar.py  test_save_workflow_modal.py  test_saved_analyses_edge_cases.py  test_string_column_detection.py  test_workflow_service.py
(+48 files in other folders)
