[project]
name = "kittiwake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Remy", email = "29257684+RemyFevry@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "narwhals>=2.15.0",
    "textual>=7.0.1",
]

[project.scripts]
kittiwake = "kittiwake:main"

[project.optional-dependencies]
dev = [
    "marimo>=0.18.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
