[project]
name = "kittiwake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Remy", email = "29257684+RemyFevry@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "narwhals>=2.15.0",
    "textual>=7.0.1",
    "typer>=0.9.0",
    "duckdb>=0.10.0",
    "httpx>=0.27.0",
    "nbformat>=5.10.0",
    "jinja2>=3.1.0",
    "polars>=1.36.1",
]

[project.scripts]
kittiwake = "kittiwake.__main__:main"
kw = "kittiwake.__main__:main"

[project.optional-dependencies]
dev = [
    "marimo>=0.18.4",
    "pytest>=8.0.0",
    "pytest-asyncio",
]
backends = [
    "polars>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/kittiwake"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
